--- a/aboutme.html
+++ b/aboutme.html
@@ -136,7 +136,9 @@ summary:hover {
         <li>A Wonderful Day For Fishing</li>
         <li>Abiotic Factor</li>
         <li>agar.io</li>
+        <li>ALADDIN.EXE</li>
         <li>Alien: Isolation</li>
+        <li>Alone In Tokyo</li>
         <li>Amazeness - Survive the maze</li>
         <li>Amazing Brick</li>
         <li>Amnesia
@@ -178,6 +180,8 @@ summary:hover {
             <li>CaseOh's Basics in Eating and Fast Food (Baldi's Basics Mod)</li>
             <li>Obama's Basics in Winning the Vote (Baldi's Basics Mod)</li>
             <li>Raldi's Crackhouse (Baldi's Basics Mod)</li>
+            <li>REFLEXES (Baldi's Basics Mod)</li>
+            <li>Victim 99 (Baldi's Basics Mod)</li>
             <li>Waldi's Wankhouse Demo (Baldi's Basics Mod)</li>
             <li>Yin's Birthday Bash Reimagined (Baldi's Basics Mod)</li>
         </ul></li>
@@ -326,11 +330,15 @@ summary:hover {
         <li>Garry's Mod</li>
         <li>Gauntlet of Ire</li>
         <li>Genshin Impact</li>
-        <li>Geometry Dash</li>
-        <li>Geometry Dash Lite</li>
-        <li>Geometry Dash Meltdown</li>
-        <li>Geometry Dash Subzero</li>
-        <li>Geometry Dash World</li>
+        <li>GentleMoon</li>
+        <li>Geometry Dash
+            <ul>
+            <li>Geometry Dash</li>
+            <li>Geometry Dash Lite</li>
+            <li>Geometry Dash Meltdown</li>
+            <li>Geometry Dash Subzero</li>
+            <li>Geometry Dash World</li>
+        </ul></li>
         <li>Geostorm</li>
         <li>Getting Over It</li>
         <li>gettoz.com</li>
@@ -434,7 +442,9 @@ summary:hover {
         <li>Not Not</li>
         <li>Nox Timore</li>
         <li>OMORI</li>
+        <li>one after another</li>
         <li>One Chance</li>
+        <li>onions.exe</li>
         <li>osu!</li>
         <li>Outlast</li>
         <li>Pac-Man</li>
@@ -466,6 +476,7 @@ summary:hover {
         <li>Portal</li>
         <li>Portal 2</li>
         <li>Presentable Liberty</li>
+        <li>Project Frequency | Legacy Version</li>
         <li>PUBG Mobile</li>
         <li>Pyro Jump</li>
         <li>Pythagorea</li>
@@ -487,6 +498,7 @@ summary:hover {
         <li>Ronald</li>
         <li>Safety Blanket</li>
         <li>Sakura No Gakkou</li>
+        <li>Sanic.exe</li>
         <li>Schizophrenia Simulation</li>
         <li>SCP: Containment Breach</li>
         <li>SCP: Operation Descent</li>
@@ -499,7 +511,9 @@ summary:hover {
         <li>Shotgun King: The Final Checkmate</li>
         <li>Skyward</li>
         <li>SLENDER</li>
+        <li>Slender Must Die</li>
         <li>Slender: The Eight Pages</li>
+        <li>SlenderCraft</li>
         <li>Slide in the woods</li>
         <li>slither.io</li>
         <li>Smash Hit</li>
@@ -511,6 +525,7 @@ summary:hover {
         <li>Sophie's Curse</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
+        <li>Spooky Cats</li>
         <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
         <li>Squirrel Stapler</li>
@@ -605,6 +620,6 @@ summary:hover {
         <li>ZType</li>
     </ol>
 </details>
-<h4>This site was last updated on June 19, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
+<h4>This site was last updated on June 14, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
 </body>
 </html>
