changed some things

--- a/aboutme.html
+++ b/aboutme.html
@@ -102,7 +102,7 @@ summary:hover {
 </details>
 <details>
     <summary>Common Socials</summary>
-    <p>Discord: scipred - You may send any direct message any time, but do not expect a response.</p>
+    <p>Discord: scipred - You may send any direct message any time, but do not expect a response - even when my status shows that I'm online.</p>
     <p>Reddit: u/SciPred - However, I rarely use the account.</p>
     <p>Twitter/X: SciPred, @scipreda - Don't confuse the name with the tag.</p>
     <p>YouTube: SciPred, @SciPred - This should be obvious enough.</p>
@@ -110,7 +110,7 @@ summary:hover {
 </details>
 <details>
     <summary>Age and Gender</summary>
-    <p>19 years old since this page was last updated. Straight male.</p>
+    <p>19 years old. Straight male.</p>
 </details>
 <details>
     <summary>Hobbies</summary>
@@ -181,6 +181,8 @@ summary:hover {
             <li>Obama's Basics in Winning the Vote (Baldi's Basics Mod)</li>
             <li>Raldi's Crackhouse (Baldi's Basics Mod)</li>
             <li>REFLEXES (Baldi's Basics Mod)</li>
+            <li>The Early Version (Baldi's Basics Mod)</li>
+            <li>The Final Lesson (Baldi's Basics Mod)</li>
             <li>Victim 99 (Baldi's Basics Mod)</li>
             <li>Waldi's Wankhouse Demo (Baldi's Basics Mod)</li>
             <li>Yin's Birthday Bash Reimagined (Baldi's Basics Mod)</li>
