updating games list

--- a/aboutme.html
+++ b/aboutme.html
@@ -50,9 +50,15 @@ p {
     font-weight: bold;
     width: 80%;
     margin: auto;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+li {
+    transition: color 0.15s, padding-left 0.2s;
 }
 li:hover {
     color: #cfc;
+    padding-left: 1%;
 }
 ol li {
     font-weight: bolder;
@@ -86,6 +92,12 @@ summary:hover {
     color: black;
     background-color: aquamarine;
 }
+.sfav {
+    color: lime;
+}
+.sfav:hover {
+    color: #ffc;
+}
 </style>
 </head>
 <body>
@@ -94,7 +106,7 @@ summary:hover {
 </section>
 <details>
     <summary>Who am I?</summary>
-    <p>My name is SciPred, <a href='https://www.youtube.com/watch?v=D6do5iNnfRc&t=1s&pp=ygUOc2NpcHJlZCB3aHkgbXk%3D' target="_blank">a shortened version of SciencePredator1</a>. The shortened version, being easier to pronounce, was what stuck - however, some people call me "Sci" or "Pred" for convenience. However, <a href='https://www.youtube.com/watch?v=cdI4xdk0Pjc&pp=ygUTc2NpcHJlZCBiYWNrIHdoZW4gaQ%3D%3D' target="_blank">I used to go by other names</a>.</p>
+    <p>My name is SciPred, <a href='https://www.youtube.com/watch?v=D6do5iNnfRc&t=1s&pp=ygUOc2NpcHJlZCB3aHkgbXk%3D' target="_blank">a shortened version of SciencePredator1</a>. The shortened version, being easier to pronounce, was what stuck. Some people call me "Sci" or "Pred" for convenience - however, <a href='https://www.youtube.com/watch?v=cdI4xdk0Pjc&pp=ygUTc2NpcHJlZCBiYWNrIHdoZW4gaQ%3D%3D' target="_blank">I used to go by other names</a>. I am mostly known for creating layouts in Geometry Dash as well as uploading short non-Shorts Geometry Dash content on YouTube.</p>
 </details>
 <details>
     <summary>Email Address</summary>
@@ -118,6 +130,7 @@ summary:hover {
 </details>
 <details>
     <summary>Video/Web/Mobile/PC Games that I Play, Used To Play, Seldom Play, or Tried Out</summary>
+    <p>Games that have been highlighted in lime are my favorites in terms of story/storytelling/plot.</p>
     <ol>
         <li>(R)evolve</li>
         <li>20 Small Mazes</li>
@@ -149,7 +162,7 @@ summary:hover {
             <li>Amnesia: The Dark Descent</li>
         </ul></li>
         <li>Among Us!</li>
-        <li>ANATOMY</li>
+        <li class="sfav">ANATOMY</li>
         <li>Angry Birds
             <ul>
             <li>Angry Birds</li>
@@ -198,13 +211,13 @@ summary:hover {
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
         <li>blue (game)</li>
-        <li>Blue Archive</li>
+        <li class="sfav">Blue Archive</li>
         <li>Bonbon</li>
         <li>Bowmasters</li>
         <li>brain:code - tricky puzzles</li>
         <li>Brawl Stars</li>
         <li>Bricks n Balls</li>
-        <li>Broken Through</li>
+        <li class="sfav">Broken Through</li>
         <li>Buckshot Roulette</li>
         <li>Buff Impostor</li>
         <li>Can You Escape</li>
@@ -227,7 +240,7 @@ summary:hover {
         <li>Clash Royale</li>
         <li>Clay Jam!</li>
         <li>Click the Colour and Not the Word</li>
-        <li>Close Your Eyes</li>
+        <li class="sfav">Close Your Eyes</li>
         <li>Clustertruck</li>
         <li>cmplt</li>
         <li>Coffee Golf</li>
@@ -312,6 +325,7 @@ summary:hover {
             <li>Fireboy and Watergirl 6: Fairy Tales</li>
         </ul></li>
         <li>Fish Eat Fish</li>
+        <li>Fish Out Of Water</li>
         <li>Fit In The Hole</li>
         <li>Five Nights at Freddy's
             <ul>
@@ -344,7 +358,7 @@ summary:hover {
         <li>Geostorm</li>
         <li>Getting Over It</li>
         <li>gettoz.com</li>
-        <li>Girls' Frontline 2: Exilium</li>
+        <li class="sfav">Girls' Frontline 2: Exilium</li>
         <li>Granny</li>
         <li>Granny 2</li>
         <li>Granny 3</li>
@@ -368,7 +382,7 @@ summary:hover {
         <li>Hello Neighbor</li>
         <li>Hill Climb Racing</li>
         <li>Hole.io</li>
-        <li>Honkai: Star Rail</li>
+        <li class="sfav">Honkai: Star Rail</li>
         <li>I am Bread</li>
         <li>I Love Hue</li>
         <li>I Love Hue Too</li>
@@ -381,7 +395,7 @@ summary:hover {
         </ul></li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
-        <li>IMSCARED</li>
+        <li class="sfav">IMSCARED</li>
         <li>INPUT6</li>
         <li>Inscryption</li>
         <li>It Steals</li>
@@ -402,7 +416,7 @@ summary:hover {
         <li>Loathful</li>
         <li>Looney Tunes Dash!</li>
         <li>Lords Mobile: Kingdom Wars</li>
-        <li>Lost In Vivo</li>
+        <li class="sfav">Lost In Vivo</li>
         <li>LSD: Dream Emulator</li>
         <li>MADiSON</li>
         <li>Make Them Fall</li>
@@ -424,7 +438,7 @@ summary:hover {
         <li>Minesweeper</li>
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
-        <li>MiSide</li>
+        <li class="sfav">MiSide</li>
         <li>Money Tree: Business Tycoon</li>
         <li>Mono</li>
         <li>MONOPOLY Game</li>
@@ -433,7 +447,7 @@ summary:hover {
         <li>Monstrum</li>
         <li>Monument Valley</li>
         <li>Monument Valley 2</li>
-        <li>Mouthwashing</li>
+        <li class="sfav">Mouthwashing</li>
         <li>Muddy Heights</li>
         <li>Muddy Heights 2</li>
         <li>Nested</li>
@@ -445,7 +459,7 @@ summary:hover {
         <li>Nox Timore</li>
         <li>OMORI</li>
         <li>one after another</li>
-        <li>One Chance</li>
+        <li class="sfav">One Chance</li>
         <li>onions.exe</li>
         <li>osu!</li>
         <li>Outlast</li>
@@ -455,7 +469,7 @@ summary:hover {
         <li>Papers Please</li>
         <li>Penguin Diner: Restaurant Dash</li>
         <li>People Playground</li>
-        <li>Perfect Vermin</li>
+        <li class="sfav">Perfect Vermin</li>
         <li>PewDiePie's Tuber Simulator</li>
         <li>PewDuckPie</li>
         <li>Phases</li>
@@ -477,7 +491,7 @@ summary:hover {
         <li>Pokémon Go</li>
         <li>Portal</li>
         <li>Portal 2</li>
-        <li>Presentable Liberty</li>
+        <li class="sfav">Presentable Liberty</li>
         <li>Project Frequency | Legacy Version</li>
         <li>PUBG Mobile</li>
         <li>Pyro Jump</li>
@@ -530,13 +544,13 @@ summary:hover {
         <li>Spooky Cats</li>
         <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
-        <li>Squirrel Stapler</li>
+        <li class="sfav">Squirrel Stapler</li>
         <li>Stack</li>
         <li>Stack Rabbit</li>
         <li>Start Survey?</li>
         <li>Stay With Us Lite</li>
         <li>Stick Hero</li>
-        <li>Still Wakes The Deep</li>
+        <li class="sfav">Still Wakes The Deep</li>
         <li>Subway Surfers</li>
         <li>Sudoku.com</li>
         <li>Suite 776</li>
@@ -557,7 +571,7 @@ summary:hover {
         <li>The Confraternity of Toast</li>
         <li>The Escapists</li>
         <li>The Exit 8</li>
-        <li>The Henry Stickmin Collection</li>
+        <li class="sfav">The Henry Stickmin Collection</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
         <li>The Joy Of Creation</li>
@@ -567,13 +581,13 @@ summary:hover {
         <li>The Quest Keeper</li>
         <li>The Sims FreePlay</li>
         <li>The Sims Mobile</li>
-        <li>The Stanley Parable</li>
-        <li>The Stanley Parable: Ultra Deluxe</li>
+        <li class="sfav">The Stanley Parable</li>
+        <li class="sfav">The Stanley Parable: Ultra Deluxe</li>
         <li>The Stanley Parable: UD (Mobile)</li>
         <li>The Useless Game!</li>
         <li>The Walls</li>
         <li>The Witness</li>
-        <li>There Is No Game: Wrong Dimension</li>
+        <li class="sfav">There Is No Game: Wrong Dimension</li>
         <li>Timore</li>
         <li>Timore Inferno</li>
         <li>Tomb of the Mask</li>
@@ -600,7 +614,7 @@ summary:hover {
         <li>Vex 3</li>
         <li>Virtual Beggar</li>
         <li>Vlogger Go Viral: Tuber Life</li>
-        <li>We Become What We Behold</li>
+        <li class="sfav">We Become What We Behold</li>
         <li>We Happy Few</li>
         <li>Welcome to the Dungeon</li>
         <li>Welcome to the Game</li>
@@ -622,6 +636,6 @@ summary:hover {
         <li>ZType</li>
     </ol>
 </details>
-<h4>This site was last updated on June 14, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
+<h4>This site was last updated on July 27, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
 </body>
 </html>
