--- a/aboutme.html
+++ b/aboutme.html
@@ -248,7 +248,7 @@ summary:hover {
         <li>Color Ballz</li>
         <li>Color Fence - Mind Puzzler</li>
         <li>Color Switch</li>
-        <li>Connection Haunted</li>
+        <li>Connection Haunted (Early Access)</li>
         <li>Content Warning</li>
         <li>Cookie Clicker</li>
         <li>Cookie Clicker classic</li>
