--- a/aboutme.html
+++ b/aboutme.html
@@ -172,6 +172,7 @@ summary:hover {
         </ul></li>
         <li>Ao Oni</li>
         <li>Apex Legends Mobile</li>
+        <li>Arknights: Endfield</li>
         <li>Arrow.io</li>
         <li>Atomas</li>
         <li>Bad Ben</li>
@@ -207,6 +208,7 @@ summary:hover {
         <li>Beatblock Demo</li>
         <li>Bendy and the Ink Machine</li>
         <li>Bird 420 - MLG Flappy edition</li>
+        <li>Bitburner</li>
         <li>Bitcoin!</li>
         <li>black (game)</li>
         <li>Blackbox - brain puzzles</li>
@@ -313,6 +315,7 @@ summary:hover {
         <li>Farm Heroes Saga</li>
         <li>Feed The Head</li>
         <li>Feed Your Cat.</li>
+        <li>Fever Meme</li>
         <li>FILTHBREED</li>
         <li>Fire Balls 3D</li>
         <li>Fireboy and Watergirl
@@ -376,6 +379,7 @@ summary:hover {
         <li>Half-Life</li>
         <li>Half-Life 2</li>
         <li>Hand Simulator</li>
+        <li class="sfav">Happy Game</li>
         <li>Happy Street</li>
         <li>Happy Wheels</li>
         <li>Harvest Festival 64</li>
@@ -397,7 +401,7 @@ summary:hover {
         <li>Illuminati vs. Memes MLG</li>
         <li class="sfav">IMSCARED</li>
         <li>INPUT6</li>
-        <li>Inscryption</li>
+        <li class="sfav">Inscryption</li>
         <li>It Steals</li>
         <li>Jelly Jump</li>
         <li>JKLM.FUN Party Games</li>
@@ -406,6 +410,7 @@ summary:hover {
         <li>Just More Doors</li>
         <li>Just Shapes and Beats</li>
         <li>Kahoot!</li>
+        <li>KAMI 2</li>
         <li>Keep Talking and Nobody Explodes</li>
         <li>KinitoPET</li>
         <li>Lethal Company</li>
@@ -544,7 +549,7 @@ summary:hover {
         <li>Spooky Cats</li>
         <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
-        <li class="sfav">Squirrel Stapler</li>
+        <li>Squirrel Stapler</li>
         <li>Stack</li>
         <li>Stack Rabbit</li>
         <li>Start Survey?</li>
@@ -560,6 +565,8 @@ summary:hover {
         <li>SUPERHOT: MIND CONTROL DELETE</li>
         <li>Tadpole Tap</li>
         <li>Tap The Frog: Doodle</li>
+        <li>Tasty Planet</li>
+        <li>Tasty Planet: Back For Seconds</li>
         <li>Tasty Tadpoles</li>
         <li>Telepaint!</li>
         <li>Temple Run</li>
@@ -628,14 +635,15 @@ summary:hover {
         <li>Wordscapes</li>
         <li>World's Hardest Game</li>
         <li>Wrong Floor</li>
-        <li>Wuthering Waves</li>
+        <li class="sfav">Wuthering Waves</li>
         <li>Yandere Simulator</li>
         <li>yellow (game)</li>
         <li>YORG.io</li>
         <li>ZigZag</li>
         <li>ZType</li>
+        <li>Zuma</li>
     </ol>
 </details>
-<h4>This site was last updated on July 27, 2025. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
+<h4>This site was last updated on February 11, 2026. Note that if more than 100 days have passed since the last update, some information may be outdated at that point.</h4>
 </body>
 </html>
